# ai-robotic-book

./: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  sidebars.js  test_hallucination_prevention.py
.claude/agents/: docusaurus-ui-upgrader.md
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.docusaurus/docusaurus-plugin-content-docs/default/: site-docs-appendices-hardware-requirements-md-ff2.json  site-docs-appendices-installation-guide-md-925.json  site-docs-appendices-troubleshooting-md-bd6.json  site-docs-capstone-project-md-7bd.json  site-docs-conclusion-md-85b.json  site-docs-contracts-rag-api-contracts-md-6f1.json  site-docs-contracts-rag-configuration-management-md-091.json  site-docs-contracts-rag-data-models-md-2c9.json  (+33 more)
.github/workflows/: github-pages.yml  test.yml
.specify/memory/: constitution.md
backend/: .gitignore  README.md  config.py  integration.py  main.py  metadata_validation_rules.py  pyproject.toml  query_converter.py  requirements.txt  result_validator.py  retrieval_validator.py  retrieving.py  test_complete_pipeline.py  test_metadata_validation.py  test_quality_validation.py  test_queries.py  test_similarity_search.py  test_validation_modules.py  validation_parameters.md  validation_reporter.py  verify_accuracy_threshold.py  verify_end_to_end.py  verify_metadata_accuracy.py
backend/backend.egg-info/: PKG-INFO  requires.txt
backend/rag_agent/: agent.py  clients.py  config.py  errors.py  main.py  models.py  pyproject.toml  requirements.txt  retrieval_tool.py  utils.py
backend/rag_agent/services/: query_service.py  validation_service.py
backend/rag_agent/tests/: test_us1_basic_queries.py  test_us2_selected_text.py  test_us3_response_grounding.py
backend/rag_agent/utils/: hallucination_detector.py
backend/src/: config.py  exceptions.py  logging_config.py
backend/src/agents/: rag_agent.py
backend/src/api/: agent_router.py  health_router.py  main.py  search_router.py  validation_router.py
backend/src/config/: agent_settings.py  settings.py
backend/src/exceptions/: agent_exceptions.py  base.py
backend/src/extractor/: __init__.py  docusaurus_extractor.py
backend/src/models/: __init__.py  agent_configuration.py  agent_query.py  agent_response.py  content_chunk.py  document_metadata.py  embedding_vector.py  metadata_package.py  retrieved_chunk.py  search_query.py  validation_test.py
backend/src/retrieval/: query_processor.py  retrieval_service.py
backend/src/services/: retrieval_integration.py
backend/src/utils/: agent_logging.py  logging_config.py
backend/src/validation/: validation_service.py
backend/tests/integration/: test_agent_api.py  test_api_endpoints.py
backend/tests/unit/: test_rag_agent.py  test_retrieval_integration.py  test_retrieval_service.py  test_validation_service.py
checklists/: rag-implementation-checklist.md
deployment/: rag-frontend-deployment.md
docs/: capstone-project.md  conclusion.md  glossary.md  intro.md  references.md
docs/appendices/: hardware-requirements.md  installation-guide.md  troubleshooting.md
docs/contracts/: rag-api-contracts.md  rag-configuration-management.md  rag-data-models.md  rag-error-handling.md  rag-performance-optimization.md  rag-security-implementation.md
docs/developer-guide/: rag-developer-documentation.md
docs/module-1-ros2/: architecture.md  exercises.md  index.md  packages-management.md  python-integration.md  urdf-robots.md
docs/module-2-digital-twin/: exercises.md  gazebo-setup.md  index.md  sensor-simulation.md  unity-simulation.md  urdf-sdf-formats.md
docs/module-3-ai-robot-brain/: exercises.md  index.md  isaac-ros-vslam.md  isaac-sim-setup.md  nav2-path-planning.md  reinforcement-learning-locomotion.md
docs/module-4-vla/: exercises.md  index.md  language-guided-manipulation.md  multimodal-perception.md  vla-architecture.md  vla-system-integration.md
docs/user-guide/: rag-features-user-guide.md
frontend/: README.md  package.json
specs/001-rag-agent/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-qdrant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-retrieval/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-ai-robotics-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/2-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/components/: ChatWidget.js
src/css/: custom.css
src/pages/: index.module.css  index.tsx
static/js/: api-client.js  backend-verification.js  config.js
tests/: rag-components.test.js  rag-test-documentation.md  rag-validation-tests.md
(+67 files in other folders)
